--- a/trunk/res/layout/activity_intro.xml
+++ b/trunk/res/layout/activity_intro.xml
@@ -9,6 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="18dp"
         android:text="@string/intro_message_description" />
 
@@ -18,6 +20,8 @@
 	    android:layout_height="wrap_content"
 	    android:layout_alignParentLeft="true"
 	    android:layout_below="@+id/tvIntroMessageDescription"
+	    android:layout_marginLeft="10dp"
+	    android:layout_marginRight="10dp"
 	    android:layout_marginTop="20dp"
 	    android:text="@string/intro_message_manual" />
     
