--- a/res/layout/activity_create.xml
+++ b/res/layout/activity_create.xml
@@ -1,35 +1,33 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent" >
-
-	<ScrollView
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content" >
-
-		<LinearLayout
-			android:id="@+id/linearLayout1"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:orientation="vertical" >
+	android:layout_width="fill_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical" >
 
 			<TextView
 			    android:id="@+id/textSetEvent"
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content"
+			    android:layout_marginLeft="10dp"
+			    android:layout_marginRight="10dp"
+			    android:layout_marginTop="10dp"
 			    android:text="@string/create_event_header"
 			    android:textAppearance="?android:attr/textAppearanceMedium" />
 
 			<Button
-				android:id="@+id/btnSelectEventType"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:text="@string/create_event_select_event_type_title" />
+			    android:id="@+id/btnSelectEventType"
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    android:layout_marginLeft="10dp"
+			    android:layout_marginRight="10dp"
+			    android:text="@string/create_event_select_event_type_title" />
 
 			<EditText
 			    android:id="@+id/messageInput"
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content"
+			    android:layout_marginLeft="10dp"
+			    android:layout_marginRight="10dp"
 			    android:ems="10"
 			    android:inputType="textMultiLine" >
 
@@ -44,6 +42,7 @@
 				    android:id="@+id/messageInputTitle"
 				    android:layout_width="wrap_content"
 				    android:layout_height="wrap_content"
+				    android:layout_marginLeft="10dp"
 				    android:text="@string/create_event_message_title"
 				    android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -74,57 +73,70 @@
 			</EditText>
 
 			<TextView
-				android:id="@+id/textView2"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="@string/create_event_phonenumber"
-				android:textAppearance="?android:attr/textAppearanceSmall" />
+			    android:id="@+id/textView2"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:layout_marginLeft="10dp"
+			    android:layout_marginRight="10dp"
+			    android:text="@string/create_event_phonenumber"
+			    android:textAppearance="?android:attr/textAppearanceSmall" />
 
 			<Button
-				android:id="@+id/buttonOpenDatePicker"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:text="@string/create_event_date_title" />
+			    android:id="@+id/buttonOpenDatePicker"
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    android:layout_marginLeft="10dp"
+			    android:layout_marginRight="10dp"
+			    android:text="@string/create_event_date_title" />
 
 			<TextView
-				android:id="@+id/textView3"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="@string/create_event_data"
-				android:textAppearance="?android:attr/textAppearanceSmall" />
+			    android:id="@+id/textView3"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:layout_marginLeft="10dp"
+			    android:layout_marginRight="10dp"
+			    android:text="@string/create_event_data"
+			    android:textAppearance="?android:attr/textAppearanceSmall" />
 
 			<Button
-				android:id="@+id/buttonCreateEventTime"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:text="@string/create_event_select_time_title" />
+			    android:id="@+id/buttonCreateEventTime"
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    android:layout_marginLeft="10dp"
+			    android:layout_marginRight="10dp"
+			    android:text="@string/create_event_select_time_title" />
 
 			<TextView
-				android:id="@+id/textView4"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="@string/create_event_time"
-				android:textAppearance="?android:attr/textAppearanceSmall" />
+			    android:id="@+id/textView4"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:layout_marginLeft="10dp"
+			    android:layout_marginRight="10dp"
+			    android:text="@string/create_event_time"
+			    android:textAppearance="?android:attr/textAppearanceSmall" />
 
 			<LinearLayout
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content" >
 
 				<Button
-					android:id="@+id/btnCreateEventCancel"
-					android:layout_width="0dp"
-					android:layout_height="wrap_content"
-					android:layout_weight="1"
-					android:text="@string/create_event_cancel_header" />
+				    android:id="@+id/btnCreateEventCancel"
+				    android:layout_width="0dp"
+				    android:layout_height="wrap_content"
+				    android:layout_marginLeft="10dp"
+				    android:layout_marginRight="10dp"
+				    android:layout_weight="1"
+				    android:text="@string/create_event_cancel_header" />
 
 				<Button
-					android:id="@+id/btnCreateEventSave"
-					android:layout_width="0dp"
-					android:layout_height="wrap_content"
-					android:layout_weight="1"
-					android:text="@string/create_event_save_header" />
-			</LinearLayout>
-		</LinearLayout>
-	</ScrollView>
+				    android:id="@+id/btnCreateEventSave"
+				    android:layout_width="0dp"
+				    android:layout_height="wrap_content"
+				    android:layout_marginLeft="10dp"
+				    android:layout_marginRight="10dp"
+				    android:layout_weight="1"
+				    android:text="@string/create_event_save_header" />
 
-</RelativeLayout>
+			</LinearLayout>
+
+</LinearLayout>
