--- a/res/layout/activity_create.xml
+++ b/res/layout/activity_create.xml
@@ -35,8 +35,9 @@
 			</EditText>
 
 			<LinearLayout
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content" >
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    android:layout_gravity="bottom" >
 
 				<TextView
 				    android:id="@+id/messageInputTitle"
@@ -61,26 +62,29 @@
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content"
 			    android:text="@string/choose_contacts"
-			    android:visibility="invisible"
+			    android:visibility="visible"
 			     />
-			
+			<!-- 
 			<EditText
-				android:id="@+id/txtCreateEventPhonenumber"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:ems="10"
-				android:inputType="phone" >
+			    android:id="@+id/txtCreateEventPhonenumber"
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    android:ems="10"
+			    android:inputType="phone"
+			    >
+
 			</EditText>
 
 			<TextView
-			    android:id="@+id/textView2"
+			    android:id="@+id/txtPhonenumber"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:layout_marginLeft="10dp"
 			    android:layout_marginRight="10dp"
 			    android:text="@string/create_event_phonenumber"
-			    android:textAppearance="?android:attr/textAppearanceSmall" />
-
+			    android:textAppearance="?android:attr/textAppearanceSmall"
+			    />
+ -->
 			<Button
 			    android:id="@+id/buttonOpenDatePicker"
 			    android:layout_width="match_parent"
@@ -90,7 +94,7 @@
 			    android:text="@string/create_event_date_title" />
 
 			<TextView
-			    android:id="@+id/textView3"
+			    android:id="@+id/txtDate"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:layout_marginLeft="10dp"
@@ -107,7 +111,7 @@
 			    android:text="@string/create_event_select_time_title" />
 
 			<TextView
-			    android:id="@+id/textView4"
+			    android:id="@+id/txtTime"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:layout_marginLeft="10dp"
@@ -116,8 +120,9 @@
 			    android:textAppearance="?android:attr/textAppearanceSmall" />
 
 			<LinearLayout
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content" >
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    android:layout_gravity="bottom" >
 
 				<Button
 				    android:id="@+id/btnCreateEventCancel"
